# TRISPI

./: .gitignore  CONTRIBUTING.md  LICENSE  NODE_SETUP.md  README.md  WHITEPAPER.md  docker-compose.node.yml  docker-compose.trispi.yml  genesis.json  whitepaper.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
contracts/examples/: TRP20Token.sol
contracts/examples/hybrid/quantum_vault/: Cargo.toml
contracts/examples/hybrid/quantum_vault/src/: lib.rs
docs/: API.md  BLOCKCHAIN_CREATION.md  NODE_OPERATOR_GUIDE.md
energy-provider/: README.md  energy_provider.py  real_ai_trainer.py  requirements.txt  trispi_energy_provider.py
examples/: api_curl.sh  deploy_contract.py  energy_provider.py  query_api.py
examples/build-a-node/rust/: Cargo.toml  README.md
examples/build-a-node/rust/src/: main.rs
examples/javascript/: trispi_api.js
go-consensus/: enhanced_node.go  main.go
miner/: README.md
python-ai-service/app/: ai_engine.py  ai_miner.py  main_simplified.py  miner_fleet.py  real_ai_engine.py
scripts/: join-network.py  trispi_energy_provider.py
sdk/: README.md
sdk/python/: README.md  trispi.py  trispi_client.py
sdk/typescript/: README.md  examples.ts  index.ts  package.json  tsconfig.json
trispi/: Dockerfile.fullnode  docker-compose.yml  join_trispi_network.sh  serve_frontend.js  start_backend.sh  trispi_energy_provider.py
trispi/docker/: nginx.conf  supervisord.conf
trispi/docs/: TRISPI_Whitepaper.html
(+18 files in other folders)
