[package]
name = "trispi-node-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trispi-node"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# Uncomment to add real post-quantum Dilithium3 signatures:
# pqcrypto-dilithium = "0.5"
# pqcrypto-traits = "0.3"

[profile.release]
opt-level = 3
lto = true
