[package]
name = "quantum_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trispi-sdk = { git = "https://github.com/TRISPIAINETWORK/trispi-sdk", optional = true }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = []
wasm = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
